--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "start-api": "json-server --port 3001 --watch --static none data/db.json"
   },
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "typeface-roboto": "^0.0.54"
   },
   "devDependencies": {
     "json-server": "^0.12.2",
