--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "prop-types": "^15.6.2",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "typeface-roboto": "^0.0.54"
+    "react-dom": "^16.3.2"
   },
   "devDependencies": {
     "json-server": "^0.12.2",
