--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "start-api": "json-server --port 3001 --watch --static none data/db.json"
   },
   "dependencies": {
+    "chai": "^4.1.2",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "fetch-mock": "^6.5.0",
+    "jsdom": "^11.11.0",
+    "jsdom-global": "^3.0.2",
     "prop-types": "^15.6.2",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "sinon": "^6.1.3"
   },
   "devDependencies": {
     "json-server": "^0.12.2",
